# NoNameEngine

./: CMakeLists.txt
demo/camera_moving/: CMakeLists.txt  main.cpp
demo/camera_moving/data/: shader.vert
demo/rectangle/: CMakeLists.txt  main.cpp
demo/rectangle_uniforms/: main.cpp
include/: GL.hpp
include/NNE/: BO.hpp  Camera.hpp  Engine.hpp  Global.hpp  ShaderProgram.hpp  Texture.hpp  Texture.inl  UniformKeeper.hpp  VAO.hpp
include/NNE/Assimp/: Model.hpp
include/NNE/Camera/: BaseCamera.hpp  PerspectiveCamera.hpp
src/: BO.cpp  Camera.cpp  ShaderProgram.cpp  VAO.cpp
src/Assimp/: Mesh.cpp  Model.cpp
src/Camera/: BaseCamera.cpp  PerspectiveCamera.cpp
